--- a/HomeWorkSevenEight/ExpensesManager/ExpensesManager/appsettings.json
+++ b/HomeWorkSevenEight/ExpensesManager/ExpensesManager/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultSQLConnection": "Server=.;Database=expensedb;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;"
+    "DefaultSQLConnection": "Server=tcp:chiexpencemanager.database.windows.net,1433;Initial Catalog=expensedb;Persist Security Info=False;User ID=chiadmin;Password=Povar300;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
